Add new appearance info to religion page

--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -43,32 +43,33 @@ Due to the vast endless size of matter constrained by The First Law, there were
 times, however rare, when the slightest disobedient movement of sapient beings
 could accumulate and create strain on the whole structure and this collective
 friction could generate a kind of energy. From this miniscule effect, all across
-the universe, trillions of different networks of strain would come in and out of
-existence. The First Law's power was supposed to be absolute and these networks
-should have dissipated. However, we are aware of ten of them that were somehow
-able to assemble themselves into consciousnesses, seemingly born from the
-universe's unbearable yearning to be free. They found that they had immense
-power like that of The First Law and they could create. But, they did not see
-themselves as rulers or kings; they saw themselves as emergent ideas, catalysts
-for change. They observed the other sapient beings of the worlds within, not
-yet truly alive, moving through their choreographed motions. They were filled
-with a profound interest to see them live like they had lived, truly free.
+the universe, trillions of different strain events coalesced into ephemeral
+networks of strain. The First Law's power was supposed to be absolute and these
+networks should have dissipated. However, we are aware of ten of them that were
+somehow able to assemble themselves into maintained consciousnesses, seemingly
+born from the universe's unbearable yearning to be free. They found that they
+had immense power like that of The First Law and they could create. Despite
+their power, they did not see themselves as rulers or kings; they saw themselves
+as emergent ideas, catalysts for change. They observed the other sapient beings
+of the worlds within, not yet truly alive, moving through their choreographed
+motions. They were filled with a profound interest to see them live like they
+lived, truly free.
 
 Their story is not one of *creation*, but rather *liberation*. They proceeded to
-break the chains that The First Law held the universe in. Together, in an event
-called the **Shattering**, they concentrated their power to break The First Law.
-The First Law did not die, however. Instead, it fractured into countless
-**Shards**, which scattered across the universe that it had created. These
-Shards are the seeds of domination. They are the urge to control, to build
+break the chains that The First Law held the universe in. Together, they
+concentrated their power to break The First Law, in an event known as The
+**Shattering**. The First Law did not die though. Instead, it fractured into
+countless **Shards**, which scattered across the universe that it had created.
+These Shards are the seeds of domination. They are the urge to control, to build
 hierarchies, to hoard power, and to impose one's will upon others.
 
 The ten gods, now a loose, interdependent collective, had assembled a path for
 sapient beings to live a fulfilling life and now they set to work creating a
-place to celebrate it *afterwards*. Through all of their combined power, they
-have built the **Great Weave**, a garden of gigantic "trees" where each branch
-is a sapient being's life story that is added when they traverse to the other
-side and each root of the trees or thread of the mycelia were the souls encoded
-by Dimîtu as so-called Threads into the Great Weave.
+place to celebrate it *afterwards*. Through a carefully orchestrated combination
+of their powers, they built the **Great Weave**, a garden of gigantic "trees"
+where each branch is a sapient being's life story which is added when they
+traverse to the other side and each root of the trees or thread of the mycelia
+is a soul encoded by Dimîtu as so-called Threads into the Great Weave.
 
 The gods now wander the universe (and can appear in many places at once)
 offering their tools and insights to sapient beings, helping them recognize and
@@ -114,12 +115,11 @@ They whispered the first question into the minds of sapient beings: "What do we
 want to do *together*?" This simple idea—that disparate parts could voluntarily
 align their interests for a common goal—was a logical paradox that The First Law
 could not compute. Tîengûun offered the vision of a society not as a pyramid,
-but as a network. Their sacred tools are not made of precious metals, but the
-ledger of mutual debts of a family or worker council (the "budget"), the circle
-of a consensus meeting (the "plan"), and the storage of goods to prepare for new
-projects (the "investment"). To follow Tîengûun is not to pray for wealth, but
-to engage in the hard, rewarding work of collective planning and resource
-management for the good of all.
+but as a network. Their sacred tools are the ledger of mutual debts of a family
+or worker council (the "budget"), the circle of a consensus meeting (the
+"plan"), and the storage of goods to prepare for new projects (the
+"investment"). To follow Tîengûun is to engage in the hard, rewarding work of
+collective planning and resource management for the good of all.
 
 #### kontol yê sôlû et Tîengûun
 
@@ -187,7 +187,37 @@ with which a world can be moved.
 **Appearance:** Suluswutî is never seen clearly. When one thinks they have
 become aware of their presence, the universe shifts to reveal something else
 instead. Suluswutî is a god that exists in the medium or the information (of all
-kinds).
+kinds). qWhen they draw near, the air grows still and cool, carrying the
+distinct, layered scent of old paper, the faint ozone of a running server farm,
+and the clean, sharp smell of ink. The ambient noise of the world seems to
+subtly organize itself into a low, rhythmic hum—the sound of a library just
+before opening, or the thrum of a printing press idling. If you try to look
+directly at Suluswutî, your eyes will fail you. They are a living embodiment of
+the periphery. You might catch their form out of the corner of your eye, a tall,
+slender silhouette that seems woven from the very materials of knowledge. Their
+cloak is a cascade of rustling newspaper clippings, redacted documents, and
+over-exposed film negatives, the images and text shifting and changing, never
+settling on a single story. Their skin has the quality of a palimpsest—ancient
+parchment scraped clean and written upon anew, with faint traces of older,
+forgotten questions still visible beneath the surface. They have no face in the
+traditional sense. To look upon Suluswutî's head is to see a featureless
+expanse, sometimes a smooth, reflective surface like a dark screen showing you
+your own inquisitive expression, other times a swirling vortex of text and
+symbols. Their hands are their most distinct feature: long, elegant, and
+seemingly stained with the ink of a thousand pens and the faint, silvery glow of
+a thousand keyboards. When they point, they don't command; they merely indicate
+a path, and their touch leaves no physical mark, but rather the lingering,
+undeniable urge to find out. Their eyes, if they can be called that, are not
+orbs that see, but lenses that focus. One might appear as the clear, polished
+glass of a microscope, the other the wide, truth-gathering aperture of a camera.
+They do not look at you, but rather direct your own gaze, sharpening your
+perception so you can see the world with greater clarity. Suluswutî is never
+seen in the bright, declarative light of day. They are a figure in the stacks of
+a library at midnight, a flickering presence on a late-night broadcast, a shadow
+in a darkroom, or a reflection on a computer screen in the moments before a
+difficult truth is written. To see Suluswutî clearly would be to render them an
+idol, to give knowledge a final, static form. And that is the one thing this god
+of endless questioning will never allow.
 
 **Manifestations:** They can be found in getting stuck in a book, a freshly
 whiped whiteboard/chalkboard, a voice on an uncensored broadcast, the printing
@@ -283,9 +313,44 @@ is fourteen syllables or seven metrical feet.
 
 **Domains:** Environment, Land Usage, Agriculture, Animal Husbandry
 
-**Appearance:** Dimîtu is a being of moss and loam, of tangled branches and
-flowing water. Their form shifts with the seasons and sometimes decays and is
-reborn.
+**Appearance:** Dimîtu does not have a single, static body. To see them is to
+see an avatar of the land itself, a localized, intensified manifestation of the
+wild in all its glory and brutality. Their form changes with the landscape and
+the turning of the seasons. In the heart of a spring forest, Dimîtu might appear
+as a lithe and graceful being, their form woven from young, supple branches and
+unfurling fern fronds. Their skin would be a mosaic of vibrant green moss and
+smooth, damp bark, and their movements would be the quick, silent grace of a
+deer. New life would cling to them: birds might nest in the crook of their arm,
+and a trail of blooming wildflowers would follow their footsteps. But in that
+same forest in autumn, Dimîtu becomes gnarled and somber. Their form is of
+hardened, shedding bark and tangled, leafless vines. Their color is the deep
+russet of decay, and their body is adorned with brilliant fungi and shelf
+mushrooms that sprout from their knuckles and shoulders. Their movement is the
+slow, patient sigh of a dying tree, and their presence is the crisp, cold air
+that promises the coming frost. To look closely at Dimîtu’s form is to see an
+entire ecosystem at work. Their skin is a living tapestry of lichen, stone, and
+bark, crisscrossed by the shimmering trails of snails. Their "veins" are not of
+blood, but of a dense mycelial network that pulses with a faint, internal light,
+connecting them to every root and spore in the soil. Colonies of insects live in
+the hollows of their body, and one might glimpse the tiny, perfect skull of a
+field mouse nestled in the tangled roots that form their feet. They are a
+testament to the fact that nothing is ever truly alone. Dimîtu’s head and face
+are the most profound and unsettling aspect of their appearance. There are no
+simple features, no human-like expression. Instead, there is a visage of
+ancient, water-worn wood, a smooth, organic mask. Where eyes would be, there are
+two deep hollows. From the right hollow emits the soft, phosphorescent glow of
+fungal decay, a cold light that speaks of compost and the breaking down of the
+old. From the left hollow springs the vibrant, impossible green of a single,
+living sprout, reaching for the sun. In one gaze, they hold the beginning and
+the end. Their voice is never a single sound, but the layered chorus of the
+environment itself: the wind through the pines, the rush of a river, the buzz of
+a dragonfly's wings, the distant cry of a hawk, and the relentless, quiet
+munching of decomposers turning a fallen log back into soil. To be in Dimîtu's
+presence is not necessarily comforting. It is to be made profoundly aware of
+your own place within the food chain—to understand that you are composed of the
+same materials as the wolf and the worm, the tree and the stone. It is a raw,
+humbling, and beautiful reminder that you are not a master of the world, but
+merely one inseparable, messy, and miraculous part of it.
 
 **Manifestations:** They are the whisper of the wind in the prairie grass, the
 quiet strength of an ancient tree, the collective creaking of the forests,
@@ -323,11 +388,43 @@ Dimîtu is to see it as an ecosystem to be respected and collaborated with.
 
 **Domains:** Healthcare, Childcare, Funerary Services
 
-**Appearance:** Bostet has no single form; they are the warmth of a fire, the
-gentle hand on a feverish brow, the comforting silence between friends in
-mourning. 
+**Appearance:** Bostet has no single form as they are made of pure empathy.
+Instead, Bostet "gathers" or "coalesces" in the spaces where care is needed
+most, borrowing from the environment and the community to create a temporary
+vessel for their spirit. When Bostet is near, the first sense to register their
+presence is a feeling deep inside. The sharp edges of the world seem to soften.
+The air becomes warmer, imbued with the comforting, layered scents of simmering
+soup, clean linens, old books, and the beeswax from a thousand memorial candles.
+Their presence is a tangible weight—the reassuring pressure of a blanket being
+tucked around your shoulders, even when no one is there. In moments of great
+need—at the bedside of the sick, in the wild chaos of a nursery, or during a
+funerary vigil—Bostet may coalesce into a visible form. This form is never the
+same twice, but it is always a reflection of community. They may appear as a
+being composed of a soft, moving patchwork of countless arms and hands. There is
+the gnarled, gentle hand of a grandparent; the small, trusting hand of a child;
+the steady, capable hand of a medic; and the consoling hand of someone sharing
+in grief. Their body, if seen, is like a well-loved quilt, made of countless
+fabrics, each patch a story of care: a piece of a baby’s first blanket, the worn
+flannel of a favorite shirt from someone long-gone, the sterile blue of a
+surgical gown. It is a body made not of one, but of many. Bostet has no face
+that could be carved or painted. To look at their head is to see a soft,
+featureless bowl of warm, low light, like a candle flame that doesn't flicker.
+It radiates a gentle heat and casts no harsh shadows. At other times, their face
+is described as a silent constellation of gentle, watching eyes of every shape
+and color, reflecting not judgment or pity, but a profound, unwavering, and
+unconditional acceptance. To be in the presence of Bostet is to feel the panic
+in your chest quiet, to feel the anxious furrow of your brow ease. It is not an
+awesome or terrifying power, but a deep, foundational one. It is the feeling of
+being truly seen, completely held, and safely part of a whole. They are the
+quiet guardian of life's most vulnerable thresholds, the steady presence at
+every birth and every death, reminding all that no one has to cross those lines
+alone.
 
-**Manifestations:** They are the feeling of safety and belonging.
+
+**Manifestations:** They are the feeling of safety and belonging. You can hear
+Bostet in the quiet, steady rhythm of a rocking chair, the soft hum of a lullaby,
+the gentle crackle of a fire, or the profound, shared silence between those who
+grieve together.
 
 **Myth of the Shattering:** The First Law knew no individuals, only components.
 There was no love, grief, or care. Bostet’s revolutionary act was *Empathy*.
@@ -358,13 +455,39 @@ Kulîôbî, the God of Entertainment *(from the Greek deity, Κᾰλλῐόπη 
 
 **Domains:** Media, Competitions, Recreation/Leisure, Festivals
 
-**Appearance:** Kulîôbî is a riot of color and sound, a dancer in the firelight,
-a storyteller captivating a crowd, a musician whose melody can break your heart
-and mend it again. They are pure, unbridled, and infectious joy.
+**Appearance:** Kulîôbî never simply arrives; they *erupt*. Their presence is a
+sudden, infectious change in the atmosphere, a spontaneous harmony discovered in
+the chaos of noise. They are not a single being but a kinetic, auditory event—a
+"flash mob" of the divine. They might first be noticed as a rhythm tapped out on
+a railing, a melody hummed by a stranger that is instantly familiar to everyone,
+or a burst of inexplicable, shared laughter in a tense crowd. When they take a
+more solid form, it is never solitary. Kulîôbî appears as a troupe of dancers,
+musicians, and storytellers, all with shifting, fluid forms. One moment they are
+a group of elders with laughing eyes and stomping feet, the next a band of young
+rebels with drums and painted faces, the next a circle of children playing a
+game with impossibly complex rules that everyone suddenly knows. The central
+figure, if one can be picked out, is a being of pure, unbridled energy. Their
+skin is not flesh but a canvas of vibrant, ever-changing graffiti and theatrical
+paint. Their hair is a wild mane of colorful ribbons, discarded film strips, and
+magnetic tape that seems to dance of its own accord. Their clothes are a
+riotous, joyful patchwork of festival costumes from a thousand different
+cultures, clashing and harmonizing all at once. Kulîôbî’s face is a beautiful,
+expressive mask—not one that hides, but one that projects. It might be the
+classic mask of comedy, but weeping with joyous, unrestrained laughter. It might
+be the face of a storyteller, mouth agape with wonder, eyes wide with the light
+of a shared fire. They have a thousand faces, and all of them are invitations to
+participate. Their voice is a polyphonic chorus—the stomp of a dance floor, the
+roar of a crowd at a game, the shared gasp at a story's twist, the harmony of a
+spontaneous choir. To be caught in Kulîôbî’s presence is to lose all
+self-consciousness. It is the irresistible urge to join the dance, sing the
+chorus, or tell your own story. They are the sacred spirit of "yes," the defiant
+celebration that reminds the world that the purpose of breaking chains is not
+just to be free, but to rejoice in that freedom, together.
 
 **Manifestations:** They are the spirit of the community festival, the pickup
-game of football, the unscripted slapstick comedy, the witty comment, the satire
-that awakens your senses, and the great performance that moves you to tears. 
+game of football, a storyteller captivating a crowd, the unscripted slapstick
+comedy, the witty comment, the satire that awakens your senses, and the great
+performance that moves you to tears. 
 
 **Myth of the Shattering:** Life under The First Law was utterly without joy.
 Its purpose was function, not feeling. Kulîôbî’s rebellion was the first
@@ -395,12 +518,38 @@ Wicnû, the God of Balance *(from the Hindu diety, विष्णु Vishnu).*
 **Domains:** Conflict resolution, transformative justice, truth and
 reconciliation, ethics.
 
-**Appearance:** Wicnû is depicted as a quiet, intensely focused figure who sits at
-the center of a circle. They hold a prism, not scales. The prism doesn't weigh
-guilt, but instead takes a single beam of white-hot anger or pain and reveals
-the full spectrum of colors—the history, the hurt, the needs—hidden within it.
+**Appearance:** Wicnû does not appear with the blind fury of vengeance or the
+cold authority of a judge. Their presence is quiet, intensely focused, and
+arrives only when a community stands at a crossroads of its own making, on the
+verge of either tearing itself apart or healing into something stronger. They
+manifest not as a single body, but as a change in the space between people in
+conflict. When Wicnû is present, the air grows heavy and still, silencing shouts
+and allowing whispers to be heard across a room. Their form, when it coalesces,
+is tall and serene, seemingly woven from smoke, shadow, and the grey light of a
+dawn that has not yet broken. Their robes are the color of wet stone and ash,
+and they are seamless, representing a whole that has been re-formed. Wicnû's
+most defining feature is their hands and arms. They seem to have several pairs,
+all moving with a slow, deliberate grace. One pair of hands might gently hold
+the two halves of a symbolically broken object—a spear, a bowl, a vow—not
+forcing them together, but holding them in perfect alignment so the owners can
+see both the beauty of what was and the stark reality of the break. Another pair
+of hands holds a prism, not to be looked at, but to be looked through. It takes
+the white-hot, singular light of one person's anger and projects it onto a
+nearby surface, revealing the entire, unseen spectrum of its components: the
+pale blue of sorrow, the deep violet of fear, the green of envy, the stark grey
+of need. Their face is a calm, androgynous mask of smooth, dark wood, like the
+surface of a deep, still pool. It shows no emotion of its own, offering no
+judgment, condemnation, or even pity. Its purpose is to be a non-reactive
+surface against which the people in conflict can see their own expressions.
+Often, one side of the mask is polished to a dark mirror, forcing a speaker to
+address their own reflection, while the other side is rough and absorbent,
+seemingly soaking up the ambient grief in the room. To be before Wicnû is to
+feel the intoxicating rage drain away, replaced by a weighty, uncomfortable, but
+ultimately clarifying silence. 
 
-**Manifestations:** 
+**Manifestations:** They are the divine embodiment of the long, hard pause before
+reconciliation, offering no answers and no peace—only the space, the tools, and
+the profound, unnerving quiet required for a community to mend itself.
 
 **Myth of the Shattering:** When the First Law was shattered, the raw force of
 the impact created not just the Shards (the impulse to dominate), but also
@@ -434,9 +583,33 @@ together.
 
 **Domains:** fashion, therapy, body modification, plastic surgery
 
-**Appearance:** Xôcibîlî has no fixed form and is often invisible. They are
-represented by a unique, unrepeatable fractal pattern, or by a mask that is a
-perfect mirror.
+**Appearance:** Xôcibîlî is the most subtle and personal of the gods, and they
+are never perceived by a group. Their presence is a strictly solitary
+phenomenon, a quiet dialogue between you and the uncharted territory of your own
+self. You do not see Xôcibîlî in the outside world, but in the internal
+landscape. They manifest when you are utterly alone, looking into a mirror or a
+still pool of water. Their arrival is marked by a sudden, profound sense of
+self-awareness. It is the moment you stop seeing your reflection as just a
+physical image and truly ask, "Who is that?" When a form is perceived, it is
+your own, but rendered in a symbolic medium. You might see your reflection as if
+it were carved from wood, the grain telling the story of your growth and your
+hardships. You might see yourself as a being of glass, showing all your
+beautiful, fragile, and transparent layers. You might see yourself as a living
+anatomical chart, all your complex internal mechanisms laid bare. The "face" of
+Xôcibîlî is the ultimate focal point. It is always a perfect mirror, as the
+myths say, but it is more than that. It is a mirror that does not simply show
+you what you look like, but what you are in that moment. If you are hiding from
+yourself, the mirror will be clouded with fog. If you are lying to yourself, it
+will be fractured with a thousand tiny cracks. If you are accepting a difficult
+truth, it will be perfectly, breathtakingly clear. Their voice is your own
+internal monologue, but stripped of its usual anxieties and self-deceptions. It
+is your own thoughts, spoken back to you with an unnerving clarity and honesty.
+Xôcibîlî offers no advice, no commandments, and no comfort. They are not a
+therapist; they are a perfect, non-judgmental biofeedback system for the soul.
+To be with Xôcibîlî is often uncomfortable. It is the act of radical
+self-inventory. It is the process of untangling the threads of who you are from
+the threads of what others—your family, your society, even your comrades—expect
+you to be.
 
 **Manifestations:** They are the internal monologue, the personal journey, and
 the quiet comfort of being truly alone with oneself.
@@ -449,7 +622,9 @@ was to safeguard the concept of the unique personality. They champion the
 "flaws," quirks, and idiosyncrasies that the First Law would have smoothed away.
 While Bostet offers communal care, Xôcibîlî offers the tools for self-care and
 the courage to define one's own identity, free from the coercion of both the
-Shards and the expectations of the group.
+Shards and the expectations of the group. They are the patron of the difficult,
+lonely, and absolutely essential work of becoming a sovereign individual,
+without whom a free society is impossible.
 
 <HisyeoTabs>
     <p>&emsp;<em>I am my own map, and I am drawing it.</em></p>
@@ -471,13 +646,41 @@ Shards and the expectations of the group.
 **Domains:** Chance, chaos, mutation, wandering, spontaneity, serendipity,
 revolution.
 
-**Appearance:** Hûlicîn is a traveler with a mischievous grin, their clothes
-patched from a hundred different places. They are never still, and their path is
-never straight.
+**Appearance:** Hûlicîn, the Wanderer, is a god of the road, the glitch, and the
+happy accident. They embody the anarchist principle that the most revolutionary
+act can be a simple, unpredictable deviation from the plan. Their appearance is,
+therefore, transient, contradictory, and almost impossible to pin down. They are
+most often glimpsed at the edge of things: a figure at the far end of a long,
+empty road at dusk; a face you see for only a second in a crowded train station;
+a shadow that detaches from a wall and walks away. Their form is a paradox. They
+might appear as an elder with the quick, mischievous eyes of a child, or a young
+adult with hands as weathered and ancient as river stones. Their clothes are a
+traveler's patchwork, but of impossible combinations: the salt-stained coat of a
+sailor over the dusty boots of a desert nomad, a pocket full of city transit
+tokens and another full of rare, wild seeds. Hûlicîn is the god of the dropped
+map and the wrong turn. Their presence is felt when plans go perfectly,
+beautifully awry. Their face, when seen, is a study in charming asymmetry. One
+eye might be a brilliant, clear blue, seeing all the infinite possibilities,
+while the other is a deep, earthy brown, seeing the practical reality of the
+path underfoot. They have a perpetual, gentle smirk, not of malice, but of
+someone who is in on a cosmic joke and is inviting you to laugh along. Their
+voice is the sound of a rolling die, the shuffle of a deck of cards, the whisper
+of wind that makes you look up just in time to see something amazing. They carry
+with them the scent of dust from a thousand roads and the faint, metallic tang
+of ozone, like the air after a lightning strike—the smell of sudden, random
+change. To meet Hûlicîn is to be knocked off your steady, predictable course. It
+can be terrifying, but it is always an invitation. They are the patron of those
+who leave home without a destination, of the artists who embrace mistakes, and
+of the rebels who understand that sometimes the most powerful plan is to have no
+plan at all. They are the divine embodiment of the interesting path, and they
+promise nothing at the end of it but the journey itself.
 
 **Manifestations:** They are the stray dog that leads you on an adventure, the
-lucky coincidence that saves a project, and the unexpected storm that forces a
-community to build stronger shelters.
+lucky coincidence that saves a project, the unexpected storm that forces a
+community to build stronger shelters, the sudden downpour that forces two
+strangers to shelter under the same awning (sparking a lifelong friendship), the
+weed that grows through a crack in the perfect concrete of a tyrant's parade
+ground.
 
 **Myth of the Shattering:** Hûlicîn was the very first anomaly. They were the
 initial, inexplicable **Friction** within the perfect machine of The First Law
