add more appearance details

--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -101,6 +101,47 @@ with, and worked alongside.
 weaving a complex tapestry or drawing an intricate map that is constantly
 changing. Their voice is a quiet hum, like the sound of a focused meeting.
 
+Tîengûun does not appear as a king on a throne or a president at a podium. They
+are a deity of the process, and their manifestation is a subtle, rising tide in
+the affairs of people. One feels their presence first not as a figure, but as a
+change in the dynamics of a group. When Tîengûun draws near, disjointed
+arguments begin to find a common rhythm, selfish impulses soften into a
+willingness to listen, and the chaotic noise of a crowd starts to coalesce into
+the productive murmur of a great assembly. When they finally take a visible
+form, it is awe-inspiring not for its power, but for its complexity. Tîengûun
+appears as a vast, semi-translucent being that is simultaneously a loom, a map,
+and a meeting in session. Their body has a central, stable core of calm, focused
+energy, but their periphery is a constant, humming motion of countless hands.
+These are not their own hands, but ghostly, overlapping images of every hand in
+the community: the calloused hand of the follower of Îfêstôs, the ink-stained
+hand of Suluswutî’s scholar, the gentle hand of the Bostet-sworn caregiver. The
+hands are engaged in the endless work of the collective: they weave glowing
+threads of connection on a vast, spectral loom that forms Tîengûun’s shifting
+"body"; they pass resources—glowing orbs of light representing food, tools, or
+aid—from one to another in a seamless flow of mutual support; they cast votes
+with stones of light; and they are raised to seek recognition to speak.
+Tîengûun’s "skin," if it can be called that, resembles a living cartographical
+chart or a mind map. Lines of light, like trade routes or lines of affinity,
+shift and redraw themselves across their form as new connections are made and
+new plans are agreed upon. Watching them is like seeing the entire social and
+economic life of a community visualized in real-time. Their head is the least
+distinct part of their form, often appearing as a sphere of woven light, a
+physical representation of a "hive mind" or collective consciousness. It has no
+single face, for to give it one would be to give the community a single ruler.
+Instead, one might see fleeting, superimposed images of the community's members
+as they speak or are listened to, their faces momentarily becoming part of the
+godhead before receding back into the whole. The voice of Tîengûun is the
+ultimate expression of their nature. It is a polyvocal hum that contains every
+voice from the meeting. It is the sound of a dozen different arguments being
+gently braided into a single, strong cord of consensus. It is the quiet rustle
+of a thousand distributed ledgers balancing themselves. To listen to Tîengûun is
+to hear disagreement, debate, and dissonance not as destructive noise, but as
+the necessary, creative friction from which a truly resilient agreement is
+forged. To be in Tîengûun’s presence is to feel profoundly part of something
+larger than yourself, without feeling diminished. It is the feeling of being a
+vital, necessary node in a great, intelligent network. They are not the will of
+the people, but the process by which that will discovers itself.
+
 **Manifestations:** They are found in meetings that are going smoothly,
 estimations that are found to be exact, an idea that appears in multiple
 people's heads simultaneously each one enhancing the other's, a perfectly
@@ -141,10 +182,41 @@ collective planning and resource management for the good of all.
 
 **Domains:** Power, Communications, Technology, Transportation
 
-**Appearance:** Unonsî is a restless figure, always tinkering. They appear as a
-smith with sparks in their hair, or a coder with lines of light flowing from
-their fingertips. They are covered in tools, wires, and half-finished
-inventions.
+**Appearance:**  Unonsî is never still. To see them is to witness a being in a
+perpetual state of inspired, restless creation. They flicker into existence
+wherever a new idea is taking shape—in the focused silence of a coder's room,
+the clang and fire of a blacksmith’s forge, or the collaborative chaos of a
+community makerspace. Their arrival is not announced by a grand entrance, but by
+a change in the potential of the space. Tools seem to arrange themselves more
+logically, a complex problem suddenly appears simple, and the air crackles with
+the low, distinct hum of a running electrical current and the faint, clean scent
+of ozone and hot solder. Unonsî’s form is a wiry, energetic frame that is both
+ancient and impossibly futuristic. Their body is a living schematic. Their skin
+is a pale, ceramic-like material, etched with glowing, shifting lines that
+resemble a combination of circuit board traces, engineering blueprints, and the
+constellations ancient navigators used to first cross the seas. These lines of
+light pulse and reroute in real-time, visualizing the flow of data, power, or a
+new line of thought. Their "muscles" are tightly-wound bundles of copper wire
+and fiber-optic cables, and through translucent patches in their skin, you can
+see intricate clockwork mechanisms and glowing capacitors working in perfect,
+silent harmony. They are a walking embodiment of the "black box" made
+transparent, their inner workings laid bare for all to see and learn from.
+Unonsî’s hands are their most remarkable feature. They are strong, nimble, and
+constantly in motion—one moment calloused and smudged with graphite and grease
+from working a lathe, the next moment trailing sparks from a welding torch, and
+the next moment resolving into long, elegant fingers that dance through the air,
+manipulating holographic data streams or tying microscopic knots. Their face is
+sharp, angular, and framed by a chaotic mane of hair that looks like a
+beautiful, tangled mess of wires and filaments, some of which spark with tiny,
+harmless arcs of electricity. Their eyes are the most intense shade of blue—the
+pure, unwavering light of a gas flame or an LED. Unonsî's voice is a modulated,
+polyphonic synthesis of signals: the rhythmic click of a telegraph, the clean
+sine wave of a crystal oscillator, the sound of a dial-up modem connecting, and
+the clear, data-rich voice of a modern text-to-speech engine all at once. It is
+the sound of information being transmitted, decoded, and shared. To be in
+Unonsî’s presence is to feel a surge of creative energy, a sudden, powerful urge
+to take something apart, figure out how it works, and put it back together to
+serve your community.
 
 **Manifestations:** They are found in the eureka moments, the flashes of
 brilliance, the new approaches, the wild ideas that work, the re-purposing and
